comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Curso gratis</h1>
     </header>
     <article>
-        <h2>Titulo artigo</h2>
-        <p>Texto artigo</p>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+             elit. Voluptatem maxime optio dolores fugiat
+              nihil amet, sed reprehenderit illum ipsum et
+               consequuntur eius ab perspiciatis in labore
+                perferendis assumenda? Illum, dolores!</p>
     </article>
     <article>
-        <h2>Titulo artigo 2</h2>
-        <p>Texto artigo 2</p>
+        <h2>Curso de javascript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+             elit. Sunt dignissimos dolor error est quidem ut
+              modi assumenda, porro, perferendis quas facere
+               neque accusamus corrupti aspernatur blanditiis
+                dolorem nobis vel? Eaque?</p>
     </article>
 </main>
 </body>
